Table produksi_joint {
  id bigint
  tanggal_produksi date
  kendala varchar [null]
  created_at timestamp
  updated_at timestamp
}
Table pegawai_joint {
  id bigint
  id_produksi_joint bigint [ref: > produksi_joint.id]
  id_pegawai bigint
  masuk time
  pulang time
  tugas text
  ijin varchar [null]
  ket varchar [null]
  created_at timestamp
  updated_at timestamp
}
Table modal_joint {
  id bigint
  id_produksi_joint bigint [ref: > produksi_joint.id]
  id_ukuran bigint
  id_jenis_kayu bigint
  kw varchar
  no_palet int
  jumlah int
  created_at timestamp
  updated_at timestamp
}
Table hasil_joint {
  id bigint
  id_produksi_joint bigint [ref: > produksi_joint.id]
  id_ukuran bigint
  id_jenis_kayu bigint
  kw varchar
  no_palet int
  jumlah int
  created_at timestamp
  updated_at timestamp
}
Table bahan_produksi {
  id bigint
  id_produksi_joint bigint [ref: > produksi_joint.id]
  nama_bahan varchar
  jumlah int
  created_at timestamp
  updated_at timestamp
}
Table validasi_joint {
  id bigint
  id_produksi_joint bigint [ref: > produksi_joint.id]
  role varchar
  status varchar
  created_at timestamp
  updated_at timestamp
}